feat(auth): integrate terms and conditions with sign-up
- Update NavigationOptions to support terms page navigation
- Add terms acceptance callback handling
- Update sign-up page to link to terms page
- Improve terms page layout and styling
- Add dark mode support for terms page

--- a/src/features/auth/views/signup-page.xml
+++ b/src/features/auth/views/signup-page.xml
@@ -61,9 +61,14 @@
                 </StackLayout>
 
                 <!-- Terms and Conditions -->
-                <GridLayout columns="auto, *" class="terms-container m-y-10">
+                <GridLayout columns="auto, *" class="terms-container">
                     <Switch checked="{{ acceptTerms }}" col="0" />
-                    <Label text="I accept the Terms and Conditions" col="1" class="m-l-10" textWrap="true" />
+                    <StackLayout col="1" orientation="horizontal" class="m-l-10">
+                        <Label text="I accept the " />
+                        <Label text="Terms and Conditions" 
+                               class="link" 
+                               tap="{{ onViewTerms }}" />
+                    </StackLayout>
                 </GridLayout>
 
                 <!-- Error Message -->
